#50 fixed bug with dropdownmenu on smaller screens

--- a/frontend/src/assets/DropdownMenu.css
+++ b/frontend/src/assets/DropdownMenu.css
@@ -159,6 +159,7 @@
 .dropdown.closed {
   max-height: 0;
   opacity: 0;
+  pointer-events: none;
 }
 
 @media (max-width: 450px) {
